Make sure anchor links don’t scroll behind the header

--- a/public/globals.css
+++ b/public/globals.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+* {
+  scroll-margin-top: calc(var(--top-nav-height) + 10px);
+}
+
 body {
   font-family: "Inter", "Helvetica", "Arial", "sans-serif";
   background-color: #171A21;
